spacing fixed and colors matched to geisha img

--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,5 +1,5 @@
 :root {
-    --color-red: #ec1840;
+    --color-red: #E53B44;
     --color-white: #fff;
     --color-black-1: #111;
     --color-black-2: #222;
@@ -8,19 +8,17 @@
     --speed-fast: 0.8s;
   }
 
-* {
+  * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'VT323', monospace;
   }
-
-
+  
   body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
     min-height: 100vh;
     background: var(--color-black-1);
     font-family: 'VT323', monospace;
@@ -28,39 +26,39 @@
   }
 
 .header-container {
-    display: flex;
-    flex-grow: 5;
-    background-color: black;
-    color: white;
-    padding: 10px;
+    background-color: var(--color-black-1);
+    color: var(--color-white);
     font-size: 35px; 
-    margin: 10px 50px; 
+    margin-top: 0px; 
+    margin-bottom: 10px;
+    margin-left: 25px;
+    margin-right: 25px;
     letter-spacing: 6px; 
+    height: 5vh;
 }
 
 .character {
-    margin-top: 70%;
+    margin-top: 2%;
     height: 450px;
     width: 300px;
 }
 
-a {
-    padding: 35px;
-    position: relative;
+button, a {
     width: 180px;
     height: 60px;
-    margin: 20px;
+    margin: 50px;
     line-height: 60px;
     letter-spacing: 2px;
     text-decoration: none;
     text-transform: uppercase;
     text-align: center;
-    color: var(--bl);
+    font-size: 35px;
+    font-family: 'VT323', monospace;
+    color: var(--color-black-1);
     transition: var(--speed-normal);
-    border: 1px solid var(--color-red);
   }
   
-  a:hover {
+  button:hover {
     border: 1px solid transparent;
     background: var(--color-red) url(../pixel.png);
     transition-delay: 0.8s;
