--- a/styles/landing.css
+++ b/styles/landing.css
@@ -1,7 +1,7 @@
 
 
 :root {
-  --color-red: #ec1840;
+  --color-red: #E53B44;
   --color-white: #fff;
   --color-black-1: #111;
   --color-black-2: #222;
@@ -28,7 +28,7 @@ body {
 }
 
 a {
-  padding: 35px;
+  padding: 20px;
   position: relative;
   width: 180px;
   height: 60px;
@@ -38,9 +38,9 @@ a {
   text-decoration: none;
   text-transform: uppercase;
   text-align: center;
-  color: var(--color-white);
+  color: var(--color-black-1);
+  background-color: var(--color-white);
   transition: var(--speed-normal);
-  border: 1px solid var(--color-red);
 }
 
 a:hover {
